<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JScan</string>


    <!-- MainActivity -->
    <string name="title_activity_main">Japanese Dictionary</string>
    <!-- Names of Main btns-->
    <string name="btn_ocr_name">Scan OCR</string>
    <string name="btn_quiz_name">Quiz</string>
    <string name="btn_multi_translate_name">Translation</string>
    <string name="btn_favorite_name">Favorite</string>
    <string name="btn_setting_name">Setting</string>
    <string name="btn_info_name">Infomation</string>


    <!-- OCRActivity -->
    <string name="ocr_title">OCR Scan</string>
    <string name="button_text">OCR!</string>
    <string name="text_hint">OCRed Text will appear here</string>

    <!-- CustomActionBar -->
    <string name="search_hint">"Enter your text here..."</string>

    <!-- MultiTranslateActivity -->
    <string name="multi_translate_title">Translate</string>

    <!-- FavoriteActivity -->
    <string name="favorite_title">Favorite</string>
    <string name="confirm_delete_all">Are you sure to delete all your favorite words?</string>
    <string name="favorite_words_is_empty">Found 0 favorite words.</string>

    <!-- Setting Activity -->
    <string name="setting_title">Setting</string>
    <string name="app_theme_option_text">App Theme</string>
    <string name="language_option_text">Language</string>

    <!-- DetailActivity -->
    <!--<string name="sample_large_string">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>-->
    <string name="sample_large_string">""</string>
    <string name="sample_title_string">"What is lorem ipsum?"</string>
    <string name="detail_title">Detail</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="synonymous">Synonymous</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="example">Example</string>
    <string name="save_successfully">This word has been saved to Favorite successfully</string>
    <string name="remove_favorite">This word has been removed from Favorite</string>
    <string name="save_unsuccessfully">Error happens when saving this word</string>

    <!-- InfomationActivity -->
    <string name="infomation_title">Information</string>
    <string name="pre_market_uri">"market://details?id="</string>
    <string name="pre_google_play_uri">"http://play.google.com/store/apps/details?id="</string>
    <string name="fanpage_url">"https://www.facebook.com/pg/JScan-T%%E1%%BB%%AB-%%C4%%91i%%E1%%BB%%83n-v%%C3%%A0-OCR-ti%%E1%%BA%%BFng-Nh%%E1%%BA%%ADt-1712671182359298/about/?ref=page_internal"</string>

    <!-- QuizActivity -->
    <string name="quiz_title">Quiz</string>
    <string name="title_reading_quiz_text">Reading Revision Quiz</string>
    <string name="title_listening_quiz_text">Listening Revision Quiz</string>
    <string name="quiz_submit_hint">"Enter your answer here..."</string>
    <string name="your_score_text">Your score</string>

    <!-- DictContentProvider-->
    <string name="invalid_query_uri">Invalid query Uri: </string>
    <string name="invalid_insert_uri">Invalid insert Uri: </string>
    <string name="invalid_update_uri">Invalid update Uri: </string>
    <string name="invalid_delete_uri">Invalid delete Uri: </string>
    <string name="insert_failed">SQLException in inserting</string>

    <!-- SearchResultActivity-->
    <string name="not_found"> is not found</string>
    <string name="search_result_title">Search Result</string>


    <!-- Others -->



    <!-- Temp (It will be deleted late) -->
    <string name="textspeech">TextSpeech</string>
    <string name="addtofavoritelist">AddToFavoriteList</string>
    <string name="empty_data"> </string>
    <string name="next">Next</string>
    <string name="speaker">Click to speak word</string>
    <string name="revision_reset">Reset revision</string>
    <string name="exit">Exit</string>
    <string name="index_question">%1$d / %2$d</string>
    <string name="revision_score">Score: %1$d</string>
    <string name="revision_result">%1$d guesses, %2$.02f%% correct</string>
    <string name="correct_answer">Correct answer: %1$s</string>
    <string name="correct">Correct!</string>
    <string name="num_of_words">(%1$d)</string>
    <string name="empty_word">The word should not be empty</string>

</resources>