<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:columnCount="3"
    android:rowCount="2"
    android:layout_gravity="top"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/labelWord"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/empty_data"
        android:layout_gravity="fill"
        android:singleLine="false"
        android:maxWidth="24dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSpeaker"
        android:layout_column="1"
        android:layout_row="0"
        android:src="@drawable/green_speech"
        android:contentDescription="@string/textspeech"
        android:onClick="buttonSpeakerClicked"
        android:background="#00ffffff"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFavorite"
        android:layout_column="2"
        android:layout_row="0"
        android:contentDescription="@string/addtofavoritelist"
        android:onClick="buttonFavoriteClicked"
        android:src="@drawable/blue_star"
        android:background="#00ffffff"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewWordMeaning"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/synonymous"
                android:id="@+id/labelSynonymous"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/empty_data"
                android:id="@+id/textSynonymous"
                android:layout_margin="10dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/english"
                android:id="@+id/labelEnglish"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/empty_data"
                android:id="@+id/textEnglish"
                android:layout_margin="10dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vietnamese"
                android:id="@+id/labelVietnamese"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/empty_data"
                android:id="@+id/textVietnamese"
                android:layout_margin="10dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/example"
                android:id="@+id/labelExample"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/empty_data"
                android:id="@+id/textExample"
                android:layout_margin="10dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</GridLayout>
