<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtIndexQuestion"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtScore"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:id="@+id/textView"
            android:textColor="@android:color/holo_blue_dark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/scrollView2" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEnglish" />
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese"
            android:id="@+id/textView2"
            android:textColor="@android:color/holo_blue_dark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/scrollView3" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtVietnamese" />
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtCorrectAnswer"
            android:clickable="false"
            android:visibility="invisible" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtWord"
            android:hint="Your answer"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btnNext"
            android:layout_gravity="center_horizontal"
            android:onClick="buttonNextClicked"
            android:src="@drawable/next_button"
            android:background="#00ffffff"/>

</LinearLayout>